--- a/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
+++ b/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
@@ -3,9 +3,7 @@
 
   "ConfigUpdater": {
     "ConfigFilePaths": [
-      "app.config",
-      "web.config",
-      "Views\\web.config"
+      "app.config"
     ]
   },
 
@@ -13,21 +11,8 @@
     "TryConvertPath": "./try-convert/try-convert.dll"
   },
 
-  "SourceUpdater": {
-    "AdditionalAnalyzerTexts": [
-      "WebTypeReplacements.typemap"
-    ]
-  },
-
   "PackageUpdater": {
     "PackageMapPath": "PackageMaps"
-  },
-
-  "TemplateInserter": {
-    "TemplateConfigFiles": [
-      "Templates\\CSharpWebAppTemplates\\WebAppTemplates.json",
-      "Templates\\VisualBasicWebAppTemplates\\WebAppTemplates.json"
-    ]
   },
 
   "ExtensionServiceProviders": [
