--- a/samples/PackageMapSample/PackageMapSample/PackageMapSample.csproj
+++ b/samples/PackageMapSample/PackageMapSample/PackageMapSample.csproj
@@ -7,7 +7,13 @@
   <!-- Be sure the extension's manifest file is copied on build,
        so that it will be present in the extension's binary output. -->
   <ItemGroup>
+    <!-- Make sure the extension manifest is copied -->
     <Content Include="ExtensionManifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+
+    <!-- Include package maps as content -->
+    <Content Include="SamplePackageMaps\*.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
