--- a/samples/SourceUpdaterSample/SourceUpdaterSample/SourceUpdaterSample.csproj
+++ b/samples/SourceUpdaterSample/SourceUpdaterSample/SourceUpdaterSample.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <!-- Be sure the extension's manifest file is copied on build,
@@ -14,9 +14,14 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.8.0" />
-    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions" Version="0.2.212606" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.9.0" />
+
+    <!-- In a real (external) extension, Upgrade Assistant abstractions would be referenced as a NuGet package -->
+    <!-- To enable building and testing with the latest Upgrade Assistant chnges, samples in this repo use -->
+    <!-- a project reference instead. -->
+    <!--<PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Abstractions" Version="0.2.222701" />-->
+    <ProjectReference Include="..\..\..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
