Ensure typemap is copied

--- a/src/extensions/web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web.csproj
+++ b/src/extensions/web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web.csproj
@@ -15,6 +15,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\..\default\analyzers\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers\WebTypeReplacements.typemap" Link="WebTypeReplacements.typemap">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 
