--- a/samples/PackageMapSample/PackageMapSample.csproj
+++ b/samples/PackageMapSample/PackageMapSample.csproj
@@ -4,10 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
-  <!-- Be sure the extension's manifest file is copied on build,
-       so that it will be present in the extension's binary output. -->
   <ItemGroup>
+    <!-- Be sure the extension's manifest file is copied on build,
+       so that it will be present in the extension's binary output. -->
     <Content Include="ExtensionManifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+
+    <!-- Include package maps as content -->
+    <Content Include="SamplePackageMaps\*.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -17,7 +22,7 @@
     <!-- To enable building and testing with the latest Upgrade Assistant chnges, samples in this repo use -->
     <!-- a project reference instead. -->
     <!--<PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Abstractions" Version="0.2.222701" />-->
-    <ProjectReference Include="..\..\..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
