--- a/samples/UpgradeStepSample/UpgradeStepSample.csproj
+++ b/samples/UpgradeStepSample/UpgradeStepSample.csproj
@@ -17,7 +17,7 @@
     <!-- To enable building and testing with the latest Upgrade Assistant chnges, samples in this repo use -->
     <!-- a project reference instead. -->
     <!--<PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Abstractions" Version="0.2.222701" />-->
-    <ProjectReference Include="..\..\..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
