--- a/samples/SourceUpdaterSample/ExtensionManifest.json
+++ b/samples/SourceUpdaterSample/ExtensionManifest.json
@@ -8,9 +8,10 @@
   // types register services for the extension with Upgrade Assistant's
   // dependency injection container.
   //
-  // These are used to register new UpgradeStep implementations, analyzers,
-  // code fix providers, IConfigUpdaters, or any other type that would
-  // be useful to Upgrade Assistant or its extensions.
+  // In this case, we list the SourceUpdaterSample library that contains
+  // SourceUpdaterSampleServiceProvider, which will be used to register
+  // the analyzer and code fix provider in this extension for use during
+  // Upgrade Assistant's source updater step.
   "ExtensionServiceProviders": [
     "SourceUpdaterSample.dll"
   ]
