--- a/src/extensions/web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web.csproj
+++ b/src/extensions/web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\..\steps\Microsoft.DotNet.UpgradeAssistant.Steps.Razor\Microsoft.DotNet.UpgradeAssistant.Steps.Razor.csproj" />
   </ItemGroup>
 
   <ItemGroup>
