--- a/src/extensions/web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web.csproj
+++ b/src/extensions/web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web.csproj
@@ -1,14 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
-    <ProjectReference Include="..\..\..\steps\Microsoft.DotNet.UpgradeAssistant.Steps.Razor\Microsoft.DotNet.UpgradeAssistant.Steps.Razor.csproj" />
+    <ProjectReference Include="..\Microsoft.DotNet.UpgradeAssistant.Steps.Razor\Microsoft.DotNet.UpgradeAssistant.Steps.Razor.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <None Update="ExtensionManifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -24,5 +21,4 @@
     </Content>
     <Compile Remove="Templates\**\*.cs" />
   </ItemGroup>
-
 </Project>
