--- a/tests/extensions/web/Microsoft.DotNet.UpgradeAssistant.Steps.Razor.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.Razor.Tests.csproj
+++ b/tests/extensions/web/Microsoft.DotNet.UpgradeAssistant.Steps.Razor.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.Razor.Tests.csproj
@@ -33,7 +33,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\steps\Microsoft.DotNet.UpgradeAssistant.Steps.Razor\Microsoft.DotNet.UpgradeAssistant.Steps.Razor.csproj" />
-    <ProjectReference Include="..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
+    <ProjectReference Include="..\..\..\..\src\extensions\web\Microsoft.DotNet.UpgradeAssistant.Steps.Razor\Microsoft.DotNet.UpgradeAssistant.Steps.Razor.csproj" />
+    <ProjectReference Include="..\..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
 </Project>
