--- a/src/common/Microsoft.DotNet.UpgradeAssistant.Abstractions/Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj
+++ b/src/common/Microsoft.DotNet.UpgradeAssistant.Abstractions/Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj
@@ -46,4 +46,8 @@
       <Version>5.0.0</Version>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="build\*" Pack="true" PackagePath="" />
+  </ItemGroup>
 </Project>
