Add usage telemetry
This change adds usage telemetry to help identify needs within Upgrade
Assistant. For more details, please see https://aka.ms/upgrade-assistant-telemetry

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -1,4 +1,10 @@
 ﻿{
+  "Telemetry": {
+    "InstrumentationKey": "66aba558-ae18-4ec4-a738-517213cfcdfb",
+    "DisplayName": "Upgrade Assistant",
+    "DetailsLink": "https://aka.ms/upgrade-assistant-telemetry"
+  },
+
   "DefaultTargetFrameworks": {
     "Current": "net5.0",
     "LTS": "netcoreapp3.1",
