Add attribute replace/remove unit tests

--- a/tests/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Test/assets/TestProject.Fixed.csproj
+++ b/tests/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Test/assets/TestProject.Fixed.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="*\UA*.cs" />
-    <Compile Include="*\UA*.Fixed.cs" />
+    <Compile Remove="*\*.cs" />
+    <Compile Include="*\*.Fixed.cs" />
   </ItemGroup>
   
   <ItemGroup>
