--- a/tests/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Test/assets/TestProject.Fixed.vbproj
+++ b/tests/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Test/assets/TestProject.Fixed.vbproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="*\UA*.vb" />
-    <Compile Include="*\UA*.Fixed.vb" />
+    <Compile Remove="*\*.vb" />
+    <Compile Include="*\*.Fixed.vb" />
   </ItemGroup>
   
   <ItemGroup>
