Revert Microsoft.CodeAnalysis version to 3.8.0

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,6 +6,12 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <DebugType>embedded</DebugType>
     <DebugSymbols>true</DebugSymbols>
+
+    <!-- 
+      Use version 3.8.0 of CodeAnalysis assemblies to preserve compatibility
+      with Visual Studio 2019 16.8
+    -->
+    <MicrosoftCodeAnalysisVersion>3.8.0</MicrosoftCodeAnalysisVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(DotNetBuildFromSource)' == 'true'">
@@ -24,7 +30,7 @@
       to try to match the version loaded by msbuild.  In the offline build, this
       is simply the source-built version.
     -->
-    <MsbuildTaskMicrosoftCodeAnalysisCSharpVersion>$(MicrosoftCodeAnalysisCSharpVersion)</MsbuildTaskMicrosoftCodeAnalysisCSharpVersion>
+    <MsbuildTaskMicrosoftCodeAnalysisCSharpVersion>$(MicrosoftCodeAnalysisVersion)</MsbuildTaskMicrosoftCodeAnalysisCSharpVersion>
   </PropertyGroup>
  <!-- Common properties regarding language version, CA rulesets, output paths, etc. -->
   <PropertyGroup>
