--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Common/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Common.csproj
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Common/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Common.csproj
@@ -7,16 +7,16 @@
       <Version>3.3.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
-      <Version>3.9.0</Version>
+      <Version>$(MicrosoftCodeAnalysisVersion)</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic">
-      <Version>3.9.0</Version>
+      <Version>$(MicrosoftCodeAnalysisVersion)</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces">
-      <Version>3.9.0</Version>
+      <Version>$(MicrosoftCodeAnalysisVersion)</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Workspaces">
-      <Version>3.9.0</Version>
+      <Version>$(MicrosoftCodeAnalysisVersion)</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
