--- a/src/extensions/web/Microsoft.DotNet.UpgradeAssistant.Steps.Razor/Microsoft.DotNet.UpgradeAssistant.Steps.Razor.csproj
+++ b/src/extensions/web/Microsoft.DotNet.UpgradeAssistant.Steps.Razor/Microsoft.DotNet.UpgradeAssistant.Steps.Razor.csproj
@@ -19,7 +19,7 @@
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
-      <Version>3.9.0</Version>
+      <Version>$(MicrosoftCodeAnalysisVersion)</Version>
     </PackageReference>
   </ItemGroup>
 </Project>
