--- a/eng/Signing.props
+++ b/eng/Signing.props
@@ -14,5 +14,6 @@
     <FileSignInfo Include="Serilog.Extensions.Logging.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="Serilog.Sinks.Console.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="Serilog.Sinks.File.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="CsvHelper.dll" CertificateName="3PartySHA2" />
   </ItemGroup>
 </Project>
