Separate command options for upgrade and analyze
This change abstracts the command line options so that additional commands don't have to rely on the same options object.

--- a/src/components/Microsoft.DotNet.UpgradeAssistant.MSBuild/Microsoft.DotNet.UpgradeAssistant.MSBuild.csproj
+++ b/src/components/Microsoft.DotNet.UpgradeAssistant.MSBuild/Microsoft.DotNet.UpgradeAssistant.MSBuild.csproj
@@ -39,5 +39,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <ProjectReference Include="..\Microsoft.DotNet.UpgradeAssistant.Telemetry\Microsoft.DotNet.UpgradeAssistant.Telemetry.csproj" />
+    <ProjectReference Include="..\Microsoft.DotNet.UpgradeAssistant\Microsoft.DotNet.UpgradeAssistant.csproj" />
   </ItemGroup>
 </Project>
