--- a/src/components/Microsoft.DotNet.UpgradeAssistant.Analysis/Microsoft.DotNet.UpgradeAssistant.Analysis.csproj
+++ b/src/components/Microsoft.DotNet.UpgradeAssistant.Analysis/Microsoft.DotNet.UpgradeAssistant.Analysis.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
@@ -8,6 +7,6 @@
     <PackageReference Include="Sarif.Sdk" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
 </Project>
