--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,6 +4,7 @@
   <PropertyGroup>
     <Copyright>$(CopyrightNetFoundation)</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <ValidateLayerDiagram>true</ValidateLayerDiagram>
     <DebugType>embedded</DebugType>
     <DebugSymbols>true</DebugSymbols>
 
