--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -2,6 +2,7 @@
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
 
   <PropertyGroup>
+    <ValidateLayerDiagram>false</ValidateLayerDiagram>
     <NoWarn>$(NoWarn);CA1062</NoWarn>
   </PropertyGroup>
 
