Remove abstractions library from analyzers
Since we don't ship the abstractions with the analyzers, they will fail to load in situations where it's not available (ie VS, msbuild, etc). This links the only dependencies in since we already match based on shape rather than direct matching.

--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes.csproj
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes.csproj
@@ -10,9 +10,12 @@
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Workspaces">
       <Version>$(MicrosoftCodeAnalysisVersion)</Version>
     </PackageReference>
-    <ProjectReference Include="..\..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <ProjectReference Include="..\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.csproj" />
     <ProjectReference Include="..\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Common\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\ApplicableComponentsAttribute.cs" Link="ApplicableComponentsAttribute.cs" />
+    <Compile Include="..\..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\ProjectComponents.cs" Link="ProjectComponents.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Templates\*.cs" />
