names updated, much nicer to read

--- a/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
+++ b/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
@@ -7,8 +7,8 @@
     ]
   },
 
-  "TryConvertProjectConverter": {
-    "TryConvertPath": "./try-convert/try-convert.dll"
+  "TryConvert": {
+    "ToolPath": "./try-convert/try-convert.dll"
   },
 
   "PackageUpdater": {
