--- a/src/extensions/maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui/ExtensionManifest.json
+++ b/src/extensions/maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui/ExtensionManifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "ExtensionName": "MAUI",
 
-  "TryConvertProjectConverter": {
+  "TryConvert": {
     "Arguments": [
       "--maui-conversion"
     ]
