--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -4,9 +4,12 @@
   <Import Project="$(MSBuildThisFileDirectory)/TryConvertInstaller.targets" />
 
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.321">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.354">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
+    <AdditionalFiles Include="$(MSBuildThisFileDirectory)\stylecop.json">
+      <Visible>False</Visible>
+    </AdditionalFiles>
   </ItemGroup>
 
   <ItemGroup Condition="'$(Language)'=='C#'">
