Set --force-web-conversion in web extension

--- a/src/extensions/web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web/ExtensionManifest.json
+++ b/src/extensions/web/Microsoft.DotNet.UpgradeAssistant.Extensions.Web/ExtensionManifest.json
@@ -25,6 +25,12 @@
     ]
   },
 
+  "TryConvert": {
+    "Arguments": [
+      "--force-web-conversion"
+    ]
+  },
+
   "ExtensionServiceProviders": [
     "Microsoft.DotNet.UpgradeAssistant.Extensions.Web.dll"
   ]
