Set some default args

--- a/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
+++ b/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
@@ -8,7 +8,11 @@
   },
 
   "TryConvert": {
-    "ToolPath": "./try-convert/try-convert.dll"
+    "ToolPath": "./try-convert/try-convert.dll",
+    "Arguments": [
+      "--no-backup",
+      "--keep-current-tfms"
+    ]
   },
 
   "PackageUpdater": {
