--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -4,6 +4,8 @@
   <PropertyGroup>
     <ValidateLayerDiagram>false</ValidateLayerDiagram>
     <NoWarn>$(NoWarn);CA1062</NoWarn>
+    <IsPackable>false</IsPackable>
+    <IsUnitTestProject>true</IsUnitTestProject>
   </PropertyGroup>
 
 </Project>
