--- a/tests/Microsoft.DotNet.UpgradeAssistant.TestHelpers/Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj
+++ b/tests/Microsoft.DotNet.UpgradeAssistant.TestHelpers/Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Microsoft.DotNet.UpgradeAssistant</RootNamespace>
+    <IsUnitTestProject>false</IsUnitTestProject>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
