Reference test packages in Directory.Build.targets (#749)
This change moves all PackageReferences for test utilities to the Directory.Build.targets. This will ensure all tests have the same mocking/fixture/etc library.

--- a/tests/Microsoft.DotNet.UpgradeAssistant.TestHelpers/Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj
+++ b/tests/Microsoft.DotNet.UpgradeAssistant.TestHelpers/Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj
@@ -1,13 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Microsoft.DotNet.UpgradeAssistant</RootNamespace>
+    <IsUnitTestProject>false</IsUnitTestProject>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Autofac.Extras.Moq">
-      <Version>6.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <ProjectReference Include="..\..\src\components\Microsoft.DotNet.UpgradeAssistant.MSBuild\Microsoft.DotNet.UpgradeAssistant.MSBuild.csproj" />
