adds MAUI test for Android

--- a/tests/tool/Integration.Tests/IntegrationScenarios/MauiSample/Upgraded/EwDavidForms/EwDavidForms.Android/EwDavidForms.Android.csproj
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/MauiSample/Upgraded/EwDavidForms/EwDavidForms.Android/EwDavidForms.Android.csproj
@@ -20,15 +20,14 @@
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
   </PropertyGroup>
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0-android</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2" />
-    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.2.236301">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    <ProjectReference Include="..\EwDavidForms\EwDavidForms.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EwDavidForms\EwDavidForms.csproj" />
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.2.222702">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
