Clean up source plumbing

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -12,11 +12,15 @@
     "Preview": "net6.0"
   },
 
-  "DefaultExtensions": [
-    "default",
-    "vb",
-    "web",
-    "maui",
-    "windows"
-  ]
+  "Extensions": {
+    "Source": "https://upgradeassistant.blob.core.windows.net/extensions/index.json",
+
+    "Default": [
+      "default",
+      "vb",
+      "web",
+      "maui",
+      "windows"
+    ]
+  }
 }
