--- a/NuGet.config
+++ b/NuGet.config
@@ -9,6 +9,8 @@
     <add key="dotnet-tools" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json" />
     <add key="dotnet-eng" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-eng/nuget/v3/index.json" />
     <add key="vs-buildservices" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/vs-buildservices/nuget/v3/index.json" />
+    <add key="xamarin-impl" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/xamarin-impl/nuget/v3/index.json" />
+    <add key="maui-nugets" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/6.0.100-preview.6.21355.2-shipping/nuget/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
     <clear />
