--- a/src/extensions/maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui/ExtensionManifest.json
+++ b/src/extensions/maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui/ExtensionManifest.json
@@ -11,6 +11,12 @@
     "PackageMapPath": "PackageMaps"
   },
 
+  "TemplateInserter": {
+    "TemplateConfigFiles": [
+      "Templates\\MauiAndroid\\MauiAndroidTemplates.json"
+    ]
+  },
+
   "ExtensionServiceProviders": [
     "Microsoft.DotNet.UpgradeAssistant.Extensions.Maui.dll"
   ]
