adds MAUI head project steps, templates and TFM step

--- a/src/extensions/maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui/ExtensionManifest.json
+++ b/src/extensions/maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui/ExtensionManifest.json
@@ -13,7 +13,8 @@
 
   "TemplateInserter": {
     "TemplateConfigFiles": [
-      "Templates\\MauiAndroid\\MauiAndroidTemplates.json"
+      "Templates\\MauiAndroid\\MauiAndroidTemplates.json",
+      "Templates\\MauiHead\\MauiHeadTemplates.json"
     ]
   },
 
