--- a/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration.csproj
+++ b/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
+    <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json">
